# kiln

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  kiln.toml.example  rust-toolchain.toml
.github/workflows/: ci.yml
Formula/: kiln.rb
admin/: package-lock.json  package.json  svelte.config.js
admin/src/: app.html
admin/src/routes/: +layout.js  +page.svelte
crates/kiln-cli/: Cargo.toml
crates/kiln-cli/src/: main.rs
crates/kiln-engine/: Cargo.toml
crates/kiln-engine/benches/: step_overhead.rs
crates/kiln-engine/src/: block.rs  drafter.rs  engine.rs  grammar.rs  lib.rs  paged.rs  paged_attn.rs  radix.rs  sampler.rs  ssd.rs  step.rs
crates/kiln-engine/tests/: block_props.rs  deterministic_partition.rs  drafter.rs  grammar.rs  paged.rs  paged_attn.rs  paged_attn_leak.rs  pipeline_discard.rs  prefill_pad.rs  radix_props.rs  rollback_cost.rs  sampler.rs
crates/kiln-gateway/: Cargo.toml  build.rs
crates/kiln-gateway/src/: admin.rs  admin_models.rs  admin_register.rs  anthropic.rs  app.rs  auth.rs  chat.rs  completions.rs  config.rs  config_write.rs  error.rs  lib.rs  lifecycle.rs  main.rs  messages.rs  metrics.rs  openai.rs  ratelimit.rs  registry.rs  supervisor.rs  sysmem.rs  uds.rs  ui.rs
crates/kiln-jobs/: Cargo.toml
crates/kiln-jobs/src/: events.rs  hub.rs  lib.rs  main.rs  quantize.rs  runner.rs  serve.rs  store.rs
crates/kiln-jobs/tests/: download.rs  quantize.rs
crates/kiln-mlx/: Cargo.toml  build.rs
crates/kiln-mlx/examples/: smoke.rs
crates/kiln-mlx/src/: array.rs  debug.rs  device.rs  error.rs  fast.rs  io.rs  lib.rs  memory.rs  ops.rs  os.rs  random.rs  smoke.rs  stream.rs  sys.rs
crates/kiln-mlx/tests/: wrappers.rs
crates/kiln-models/: Cargo.toml
crates/kiln-models/examples/: generate.rs
crates/kiln-models/src/: config.rs  draft.rs  gemma2.rs  gemma3.rs  generate.rs  kv_cache.rs  lib.rs  llama.rs  model.rs  nn.rs  qwen2.rs  qwen3.rs  weights.rs
crates/kiln-models/tests/: batching.rs  calibration.rs  draft.rs  golden.rs  leak.rs  leak_batched.rs  paged_attn_gate.rs  preemption.rs  prefill_pad.rs  prefill_schedule_bench.rs  prefix_cache.rs  prefix_multiturn.rs  spec_decode.rs  spec_probe.rs  spec_throughput.rs  throughput.rs
crates/kiln-proto/: Cargo.toml  build.rs
crates/kiln-proto/src/: lib.rs
crates/kiln-tokenize/: Cargo.toml
crates/kiln-tokenize/src/: chat_template.rs  detok.rs  lib.rs  stops.rs  think.rs  tokenizer.rs  toolcall.rs
crates/kiln-tokenize/tests/: detok.rs  model_dir.rs  tokenizer.rs  toolcall_fixtures.rs
crates/kiln-tokenize/tests/fixtures/chatml/: chat_template.jinja  tokenizer_config.json
crates/kiln-tokenize/tests/fixtures/llama32/: tokenizer_config.json
crates/kiln-tokenize/tests/fixtures/toolcall/: hermes-after-tool-result.json  hermes-no-tool-text.json  hermes-two-calls.json  hermes-weather-call.json  hermes-weather-multibyte.json  hermes-weather-think-call.json  llama-after-tool-result.json  llama-bare-json.json  llama-unforced-call.json  llama-weather-call.json  llama-weather-multibyte.json  qwen_xml-multiline-value.json  qwen_xml-reasoning-then-two-calls.json  qwen_xml-single-call.json  qwen_xml-typed-params.json
crates/kiln-worker/: Cargo.toml
crates/kiln-worker/src/: engine.rs  main.rs  modelinfo.rs  service.rs
crates/kiln-worker/tests/: draft.rs  grammar.rs  rpc.rs
docs/: API_COMPAT.md  CONFIGURATION.md  SPEC.md
docs/decisions/: 0001-mlx-c-pin.md  0002-parity-bars-under-mlx-kernel-dispatch.md  0003-throughput-bar-under-deterministic-sub-batching.md  0004-golden-parity-device-scope-and-dtype-aware-delta.md  0005-speculative-verify-kernel-envelope.md  0006-speculative-throughput-bar-deployment-shape.md
packaging/: dev.kiln.gateway.plist
proto/kiln/v1/: jobs.proto  worker.proto
python/kiln_jobs_py/: pyproject.toml
python/kiln_worker_py/: pyproject.toml
python/kiln_worker_py/src/kiln_worker_py/: __init__.py  __main__.py  _gen.py  detok.py  engine.py  modelinfo.py  server.py  servicer.py  stops.py
python/kiln_worker_py/tests/: conftest.py  test_detok.py  test_stops.py  test_worker.py
scripts/: bench.py  bench.sh  fetch-test-model.sh  gen-golden.py  gen-tool-fixtures.py  soak.sh
tests/e2e/: conftest.py  pyproject.toml  test_add_model.py  test_admin_jobs.py  test_admin_ui.py  test_admission.py  test_auto_routing.py  test_chat.py  test_completions.py  test_crash_recovery.py  test_cross_worker_parity.py  test_lifecycle.py  test_messages.py  test_metrics.py  test_priority.py  test_rate_limit.py  test_soak.py  test_speculative.py  test_structured_output.py  test_system_memory.py  test_tool_calls.py
tests/golden/gemma-2-2b-it-4bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json  raw-tiny-remainder.json
tests/golden/gemma-3-1b-it-4bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json  raw-tiny-remainder.json
tests/golden/llama-3.2-1b-4bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json  raw-tiny-remainder.json
tests/golden/qwen2.5-0.5b-4bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json
tests/golden/qwen3-0.6b-4bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json
tests/golden/qwen3-0.6b-8bit/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json  raw-tiny-remainder.json
tests/golden/smollm2-135m-bf16/: chat-basic.json  chat-code.json  chat-multibyte.json  raw-continuation.json  raw-long-prefill.json  raw-tiny-remainder.json
