[workspace]
resolver = "3"
members = [
    "crates/kiln-engine",
    "crates/kiln-gateway",
    "crates/kiln-jobs",
    "crates/kiln-mlx",
    "crates/kiln-models",
    "crates/kiln-proto",
    "crates/kiln-tokenize",
    "crates/kiln-worker",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false

[workspace.dependencies]
# IPC contract codegen (SPEC §5): prost/tonic runtime + build-time protoc driver.
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# Drives the vendored mlx-c cmake build from kiln-mlx's build.rs.
cmake = "0.1"
