[workspace]
resolver = "3"
members = [
    "crates/kiln-engine",
    "crates/kiln-gateway",
    "crates/kiln-jobs",
    "crates/kiln-mlx",
    "crates/kiln-models",
    "crates/kiln-proto",
    "crates/kiln-tokenize",
    "crates/kiln-worker",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false

[workspace.dependencies]
# IPC contract codegen (SPEC §5): prost/tonic runtime + build-time protoc driver.
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# Drives the vendored mlx-c cmake build from kiln-mlx's build.rs.
cmake = "0.1"
# kiln.toml parsing with env overrides (SPEC §3, §10).
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Chat templating (SPEC §3, §8.2): Jinja2-compatible rendering of HF chat
# templates; contrib adds Python-method compat (str.strip() etc.) those
# templates rely on; chrono backs the strftime_now() template function;
# serde_json parses tokenizer_config.json; sha2 computes the template hash
# compared against WorkerInfo.chat_template_hash.
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", default-features = false, features = ["pycompat"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
sha2 = "0.10"
# Gateway (SPEC §3, §8): axum/tower/tokio HTTP+async stack, hyper-util for the
# tokio<->hyper IO bridge in the UDS gRPC connector, tracing(+subscriber) for
# structured JSON logs, prometheus for /metrics, uuid v7 request ids, argon2
# for API keys hashed at rest, async-stream for SSE translation streams.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "time", "io-util", "sync", "fs"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.14", default-features = false }
uuid = { version = "1", features = ["v7"] }
argon2 = { version = "0.5", features = ["std"] }
async-stream = "0.3"
# Intra-workspace crates.
kiln-proto = { path = "crates/kiln-proto" }
kiln-tokenize = { path = "crates/kiln-tokenize" }
