[workspace]
resolver = "3"
members = [
    "crates/kiln-cli",
    "crates/kiln-engine",
    "crates/kiln-gateway",
    "crates/kiln-jobs",
    "crates/kiln-mlx",
    "crates/kiln-models",
    "crates/kiln-proto",
    "crates/kiln-tokenize",
    "crates/kiln-worker",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false
# MSRV, enforced by cargo in every crate (rust-version.workspace = true).
# Must move in lockstep with rust-toolchain.toml and the four CI toolchain
# pins — see rust-toolchain.toml for the bump protocol and the rustc
# 1.95/1.96 GVN miscompilation context (rust-lang/rust#158830).
rust-version = "1.96.1"

[workspace.dependencies]
# IPC contract codegen (SPEC §5): prost/tonic runtime + build-time protoc driver.
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# Drives the vendored mlx-c cmake build from kiln-mlx's build.rs.
cmake = "0.1"
# kiln.toml parsing with env overrides (SPEC §3, §10).
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Chat templating (SPEC §3, §8.2): Jinja2-compatible rendering of HF chat
# templates; contrib adds Python-method compat (str.strip() etc.) those
# templates rely on; chrono backs the strftime_now() template function;
# serde_json parses tokenizer_config.json; sha2 computes the template hash
# compared against WorkerInfo.chat_template_hash.
# preserve_order (here and on serde_json below) keeps JSON object keys in
# insertion order end-to-end: tool definitions render into the PROMPT
# (`tools | tojson`), so key order is model-visible and must match the
# client's JSON and the HF reference rendering (parity-tested against
# transformers in kiln-tokenize/tests/toolcall_fixtures.rs). Pulls indexmap
# (BSD/MIT, already ubiquitous) transitively.
minijinja = { version = "2", features = ["json", "preserve_order"] }
minijinja-contrib = { version = "2", default-features = false, features = ["pycompat"] }
# Gateway-side tokenization for Rust workers (SPEC §3): loads the model's
# tokenizer.json; HF's Rust crate — the same library lineage the Python
# worker's tokenizer wraps, so token ids agree across workers. Apache-2.0.
tokenizers = "0.23"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
# Gateway (SPEC §3, §8): axum/tower/tokio HTTP+async stack, hyper-util for the
# tokio<->hyper IO bridge in the UDS gRPC connector, tracing(+subscriber) for
# structured JSON logs, prometheus for /metrics, uuid v7 request ids, argon2
# for API keys hashed at rest, async-stream for SSE translation streams.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "time", "io-util", "sync", "fs"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.14", default-features = false }
uuid = { version = "1", features = ["v7"] }
argon2 = { version = "0.5", features = ["std"] }
async-stream = "0.3"
# Structured output (SPEC §3 tech stack, §12 Phase 7): llguidance compiles
# json_schema/regex grammar specs and computes per-step allowed-token masks,
# applied as a logit processor in the worker decode step (SPEC §6.2 step 3);
# toktrie_hf_tokenizers builds its token trie from the model's
# tokenizer.json (same HF `tokenizers` lineage as kiln-tokenize, so token
# byte representations agree). Both MIT licensed, pure Rust, from the
# llguidance project (github.com/guidance-ai/llguidance).
llguidance = "1.7"
toktrie_hf_tokenizers = "1.7"
# kiln-jobs (SPEC §9.1): job state persisted in a SQLite file. rusqlite is
# the canonical Rust embedding; `bundled` compiles the vendored SQLite
# amalgamation so there is no system-library dependency. MIT (SQLite itself
# is public domain).
rusqlite = { version = "0.40", features = ["bundled"] }
# kiln-jobs (SPEC §9.1): resumable HF downloads need an HTTP client with a
# per-read stall timeout (`read_timeout` — the same dead-socket detection the
# fetch-test-model.sh hardening proved out), Range resume, and redirect
# following. rustls only (CLAUDE.md: no openssl); the hyper stack underneath
# is already in-tree via axum/tonic. MIT/Apache-2.0.
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
# Gateway add-model persistence (SPEC §8.1 admin surface): edits kiln.toml
# in place — comments, formatting, and unrelated entries byte-preserved —
# when POST /admin/models appends a [[model]] block. Already in the tree
# transitively (figment's toml backend); this makes the edit API direct.
# MIT/Apache-2.0.
toml_edit = "0.22"
# Admin SPA embedding (SPEC §3: "SvelteKit (static adapter) served by
# gateway from embedded assets (rust-embed)"). Debug builds read
# admin/build from disk at runtime (UI iterates without recompiling the
# gateway); release builds embed the files into the binary — the SPEC §1.1
# "single static gateway binary". MIT.
rust-embed = { version = "8", features = ["mime-guess"] }
# Property-based testing (dev-only): model-based invariant suites for the
# engine's block manager (SPEC §12 Phase 4, "block manager (+proptests)").
proptest = "1"
# Statistical micro-benchmarks (dev-only): the SPEC §6.2 step-overhead gate
# (<200µs non-forward overhead at batch 16, Phase 4 acceptance) and §11.3
# perf tracking. Named in the SPEC §3 testing stack. Minimal features: no
# plotters/rayon, just the cargo-bench harness support.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Intra-workspace crates.
kiln-engine = { path = "crates/kiln-engine", default-features = false }
kiln-mlx = { path = "crates/kiln-mlx", default-features = false }
kiln-models = { path = "crates/kiln-models", default-features = false }
kiln-proto = { path = "crates/kiln-proto" }
kiln-tokenize = { path = "crates/kiln-tokenize" }
