[package]
name = "kiln-cli"
description = "kiln: the operator CLI — thin wrappers over the gateway, jobs runner, and bench harness (SPEC §12 Phase 10)"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "kiln"
path = "src/main.rs"

[dependencies]
# Config loading only: `kiln models` resolves host/port with the gateway's
# exact kiln.toml + KILN_ env-override semantics rather than a drifting copy.
kiln-gateway = { path = "../kiln-gateway" }
# Already in-tree via kiln-jobs; used for the one admin API GET.
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
