[package]
name = "kiln-engine"
description = "Batching scheduler, paged KV block manager, radix prefix cache, sampler, speculative decoding, SSD tier"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["metal"]
# The sampler runs on MLX; off for the Linux CI compile-check
# (--no-default-features). The block manager (src/block.rs) is pure
# bookkeeping and builds either way.
metal = ["kiln-mlx/metal"]

[dependencies]
kiln-mlx = { workspace = true, default-features = false }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
