[package]
name = "kiln-engine"
description = "Batching scheduler, paged KV block manager, radix prefix cache, sampler, speculative decoding, SSD tier"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["metal"]
# The sampler runs on MLX; off for the Linux CI compile-check
# (--no-default-features). The block manager (src/block.rs) is pure
# bookkeeping and builds either way.
metal = ["kiln-mlx/metal"]

[dependencies]
kiln-mlx = { workspace = true, default-features = false }
# Chained prefix digests for the radix tree + persisted SSD index (SPEC
# §6.3/§6.4): keys must be collision-resistant because a collision would
# serve another prompt's KV; already a workspace dependency (kiln-worker
# uses it for model fingerprints). BSD/MIT-Apache dual licensed.
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

# SPEC §6.2 / Phase 4 acceptance: non-forward engine overhead per decode
# step at batch 16. `harness = false` (criterion owns main); the bench body
# is metal-gated like the engine itself, so the Linux CI compile/lint
# shapes see an empty main.
[[bench]]
name = "step_overhead"
harness = false
