[package]
name = "kiln-gateway"
description = "Gateway binary: axum HTTP server, API adapters, router, worker supervisor, metrics"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
async-stream.workspace = true
axum.workspace = true
figment.workspace = true
hyper-util.workspace = true
# Config-parsing surface only (no default features = no MLX): validates that
# a worker="rust" model is an architecture the Rust worker can serve, at
# gateway startup instead of first request.
kiln-models = { workspace = true, default-features = false }
kiln-proto.workspace = true
kiln-tokenize.workspace = true
prometheus.workspace = true
# Hub size probe for the add-model memory estimate (GET
# /admin/models/estimate): same client crate kiln-jobs already uses for
# downloads, same rustls-only configuration.
reqwest.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
# In-place kiln.toml editing for POST /admin/models persistence (preserves
# comments/formatting; figment stays the read path).
toml_edit.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
