[package]
name = "kiln-jobs"
description = "Job runner binary: Hugging Face downloads and quantization (wraps mlx_lm convert)"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
kiln-proto.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
# Local stub Hugging Face hub for the download/resume tests (no network).
axum.workspace = true
# Config-parsing surface only (no MLX): the quantize test verifies the
# converted checkpoint through the same parser the gateway/worker use.
kiln-models.workspace = true
