[package]
name = "kiln-mlx"
description = "FFI over vendored mlx-c plus safe wrappers — the only crate in the workspace allowed to contain unsafe"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["metal"]
# Builds and statically links the vendored mlx-c (and MLX) via cmake.
# Disabled for the Linux CI compile-check: `cargo build --workspace --no-default-features`.
metal = []

[build-dependencies]
cmake.workspace = true
# Generates the raw FFI surface from the vendored mlx-c headers at the pin —
# SPEC §7.1 mandates bindgen for kiln-mlx/src/sys.rs. Build-time only; the
# hand-written Phase 0 bindings it replaces could not scale to the full op
# surface the Llama path needs without transcription risk. BSD-3-Clause.
bindgen = "0.72"
