[package]
name = "kiln-models"
description = "Model implementations (llama, qwen*, gemma*) and config.json parsing"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["metal"]
# Model implementations need MLX; config parsing compiles everywhere
# (the Linux CI compile-check builds with --no-default-features).
# Forwarding kiln-engine/metal here (instead of enabling it on the
# dependency edge) keeps `clippy --all-targets --no-default-features` on
# the Linux lint runner from feature-unifying MLX into the graph — there
# is no Metal or vendored submodule there.
metal = ["kiln-mlx/metal", "kiln-engine/metal"]

[dependencies]
# Paged-KV step contract (SPEC §7.2): the model impls implement
# kiln-engine's StepModel against PagedKv/StepBatch since Phase 4
# (previously a dev-dependency only). Intra-workspace, no new external code.
kiln-engine = { workspace = true, default-features = false }
kiln-mlx = { workspace = true, default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Weight-file parsing per the mlx-lm conventions (SPEC §3 tech stack:
# "safetensors crate, mmap loading"; the mmap itself lives in kiln-mlx::io).
# Zero-copy views over the mapped bytes. Apache-2.0.
safetensors = "0.8"

[dev-dependencies]
kiln-tokenize.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
