[package]
name = "kiln-proto"
description = "Generated protobuf/gRPC types and shared enums for the Kiln worker protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
