[package]
name = "kiln-tokenize"
description = "Tokenizer loading, chat templates (minijinja), incremental detokenization, tool-call parsers"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
