[project]
name = "kiln-worker-py"
version = "0.0.1"
description = "mlx-lm fallback worker speaking the Kiln worker protocol (gRPC over UDS, no HTTP)"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.75",
    "protobuf>=6.30",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.75",
    "pytest>=8",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiln_worker_py"]

[tool.ruff]
# Generated protobuf/gRPC stubs are not lint targets.
extend-exclude = ["src/kiln_worker_py/gen"]
