[project]
name = "kiln-worker-py"
version = "0.0.1"
description = "mlx-lm fallback worker speaking the Kiln worker protocol (gRPC over UDS, no HTTP)"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.75",
    # mlx pinned explicitly so both workers share core MLX v0.31.1 (the version
    # vendored mlx-c v0.6.0 builds) — PROGRESS.md 2026-07-03 decision, option B1.
    # Revisit both pins together when mlx-c tags a release for a newer core.
    "mlx==0.31.1 ; sys_platform == 'darwin'",
    "mlx-lm==0.31.2 ; sys_platform == 'darwin'",
    "protobuf>=6.30",
    "psutil>=7",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.75",
    "pytest>=8",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiln_worker_py"]

[tool.ruff]
# Generated protobuf/gRPC stubs are not lint targets.
extend-exclude = ["src/kiln_worker_py/gen"]
