[project]
name = "kiln-e2e"
version = "0.0.1"
description = "Black-box HTTP tests against a full Kiln stack (SPEC §11.3)"
requires-python = ">=3.12"
# openai + anthropic: SPEC §11.3 mandates conformance against the real
#        client SDKs (one per API surface).
# httpx: plain HTTP for /metrics, /readyz, and raw error-shape assertions
#        (already a transitive dependency of openai).
# playwright: browser automation for the Phase 10 admin-UI operator-flow
#        test (SPEC §12 Phase 10 acceptance: "admin UI performs a full
#        load/serve/unload cycle" — driven through the actual UI, not the
#        API). Uses the machine's installed Chrome (channel="chrome",
#        present on dev machines and GitHub macOS runners) so no browser
#        download is needed; falls back to a `playwright install chromium`
#        browser when Chrome is absent. Apache-2.0.
dependencies = [
    "anthropic>=0.55",
    "httpx>=0.27",
    "openai>=1.90",
    "playwright>=1.49",
    "pytest>=8",
]

[tool.uv]
package = false
